changes for modules integration